--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -219,7 +219,9 @@ img{
 /* Skills Area */ 
 
 .site-main .skills-area{
-    padding: 7rem 2rem;
+    padding: 2rem 2rem;
+    align-items: center;
+    text-align: center;
 }
 
 
@@ -231,10 +233,10 @@ img{
 
 .site-main > .skills-area .skills{
     background: rgba(248, 252, 253, 0.973);
-    padding: 2rem 0;
-    width: 16rem;
-    margin: 5rem .5rem;
+    padding: 2rem 0;    
+    text-align: center;
     transition: box-shadow .7s ease;
+    align-items: center;
 }
 
 .site-main > .skills-area .skills:hover{
@@ -330,6 +332,7 @@ img{
 .site-main .project-area{
     padding: 4rem 0;
     
+    
 }
 
 .site-main .project-area .project-title h1{
@@ -355,9 +358,7 @@ img{
     filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
 }
 
-.site-main .project-area{
-    padding: 4rem 0;
-}
+
 
 .site-main .project-area .button-group button{
     background: transparent;
@@ -384,7 +385,7 @@ img{
 /* start contact Area */
 
 .site-main .contact-area{
-    padding: 8rem 5rem;
+    padding: 2rem 5rem;
 }
 .site-main .contact-area .contact-title h1{
     font-size: 35px;
