--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -135,7 +135,7 @@ button:hover
     align-items: center;
     text-align: center;
     padding-top: 100px;
-    background-image: url(../images/shewolf1-01.jpg);
+    background-image: url(../images/valkyriesseriess-01.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     
