--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -440,3 +440,15 @@ img{
 
 /* End contact Area */
 
+
+.name{
+    font-size: 22px !important;
+}
+
+.Navbar-section{
+    box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.10) !important;
+    
+}
+.nav-option{
+    margin-left: auto !important;
+}
